--- a/analysis/paper/references.bib
+++ b/analysis/paper/references.bib
@@ -132,6 +132,24 @@ url = {http://dx.doi.org/10.1016/j.athoracsur.2008.07.017},
 volume = {87},
 year = {2009}
 }
+@article{Wittenberg2017,
+abstract = {Anaphylaxis is a life-threatening hypersensitivity reaction. To identify biomarkers for the condition, we assessed serum levels of apolipoprotein (Apo)A and ApoE. We found a reduction of both lipoproteins in anaphylactic mice as well as in orally challenged food allergic patients. We then compared patients after acute anaphylaxis with several control groups (nonallergic, history of allergen-triggered anaphylaxis, acute cardiovascular/febrile reactions). In this unpaired setting, ApoE levels were unaltered, while ApoA1 was reduced in the anaphylactic group. Although unable to discriminate between anaphylaxis and cardiovascular/febrile reactions, ROC curve analysis revealed a reasonably high area under the curve (AUC) of 0.91 for ApoA1. Serum 9$\alpha$,11{\ss}-PGF2 , recently identified as a suitable biomarker for anaphylaxis, outperformed ApoA1 with AUC=0.95. Intriguingly however its power further increased upon combination of both mediators reaching AUC=1. Our data suggest that ApoA1 combined with 9$\alpha$,11{\ss}-PGF2 represents a useful composite biomarker of anaphylaxis, achieving superior diagnostic power over either factor alone.},
+author = {Wittenberg, M. and Nassiri, M. and Francuzik, W. and Lehmann, K. and Babina, M. and Worm, M.},
+doi = {10.1111/all.13176},
+issn = {01054538},
+journal = {Allergy},
+keywords = {anaphylaxis,apolipoprotein A1,apolipoprotein E,biomarkers,mast cell activation},
+mendeley-groups = {Refractory anaphylaxis},
+month = {nov},
+number = {11},
+pages = {1801--1805},
+pmid = {28378321},
+title = {{Serum levels of 9$\alpha$,11$\beta$-PGF {\textless}sub{\textgreater}2{\textless}/sub{\textgreater} and apolipoprotein A1 achieve high predictive power as biomarkers of anaphylaxis}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/28378321 http://doi.wiley.com/10.1111/all.13176},
+volume = {72},
+year = {2017}
+}
+
 @article{Heytman2004,
 abstract = {Anaphylaxis is an uncommon but serious complication of anaesthesia. Most current guidelines for the management of anaphylaxis list only epinephrine as a vasopressor to use in the event of cardiovascular collapse. We present two cases of anaphylaxis under anaesthesia where return of spontaneous circulation was refractory to epinephrine, but occurred following the administration of the alpha-agonist metaraminol. Potential advantages and disadvantages of using epinephrine in this setting, the role of alpha-agonists and some potential mechanisms accounting for their role in successful management are reviewed.},
 author = {Heytman, M. and Rainbird, Alan},
@@ -231,6 +249,27 @@ title = {{Second symposium on the definition and management of anaphylaxis: Summ
 volume = {47},
 year = {2006}
 }
+@article{Brown2004,
+abstract = {OBJECTIVE: We aimed to determine the utility of serum mast cell tryptase to diagnose anaphylaxis. METHODS: As part of a venom immunotherapy trial, we performed 64 sting challenges. Blood samples were taken before the sting (baseline), and 15 min and 60 min after the sting. Tryptase was measured in baseline, 15 minute and 60 minute serum samples. Histamine was measured in baseline and 15 minute plasma samples. Eleven people had undisputed severe anaphylactic reactions; tryptase and histamine levels were assessed against this clinical gold standard diagnosis. RESULTS: Excluding mild reactions from the analysis, peak tryptase readings had sensitivity of 0.36 and specificity of 0.93 using the recommended cut-off range ({\textless} 12.0 microg/L). Receiver-operator curve analysis found a cut-off of 9.0 microg/L would improve diagnostic performance (sensitivity 0.55, specificity 0.93). Serial tryptase measurement was significantly more discriminatory; an increase in tryptase of 2.0 microg/L or greater had a sensitivity of 0.73 and specificity of 0.98. The addition of histamine measurements, defining a positive result by either a rise in tryptase or a rise in histamine, appeared to further increase sensitivity (0.90). CONCLUSIONS: Clinicians should use caution when using serum tryptase to refute or support a diagnosis of anaphylaxis. Serial tryptase measurement increases sensitivity and specificity. Further studies using serial tryptase determinations in general emergency department practice, perhaps supplemented by histamine determinations, are warranted.},
+author = {Brown, Simon G a and Blackman, Konrad E and Heddle, Robert J},
+doi = {10.1111/j.1742-6723.2004.00562.x},
+file = {:home/wolass/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Brown, Blackman, Heddle - 2004 - Can serum mast cell tryptase help diagnose anaphylaxis.pdf:pdf},
+isbn = {5-6},
+issn = {1742-6731},
+journal = {Emergency medicine Australasia : EMA},
+keywords = {anaphylaxis‐diagnosis,histamine,human mast cell tryptase},
+mendeley-groups = {Refractory anaphylaxis},
+month = {apr},
+number = {2},
+pages = {120--124},
+pmid = {15239726},
+publisher = {Blackwell Publishing, Ltd.},
+title = {{Can serum mast cell tryptase help diagnose anaphylaxis?}},
+url = {http://doi.wiley.com/10.1111/j.1742-6723.2004.00562.x},
+volume = {16},
+year = {2004}
+}
+
 @article{Alqurashi2016,
 author = {Alqurashi, Waleed and Alnaji, Fuad and Menon, Kusum},
 doi = {10.1016/j.anai.2015.12.028},
